--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/miniautorizador
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=user
+spring.datasource.password=password
 spring.sql.init.platform=mysql
 spring.sql.init.mode=always
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
